--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <header id="main" class="header">
         <div class="header__top">
-            <div class="header__navbar">
                 <nav class="menu header-menu">
                     <ul class="menu__list">
                         <li class="menu__item">
@@ -36,11 +35,6 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="logo header__logo">
-                    <a class="logo__link" href="#">
-                        <img class="logo__img" src="./css/assets/images/photoshop-img/Logo.png" alt="#">
-                    </a>
-                </div>
                 <div class="header__right-block">
                     <div class="personal header__personal">
                         <ul class="personal__list">
@@ -77,9 +71,13 @@
                         </ul>
                     </div>
                 </div>
-            </div>
         </div>
-
+    </div>
+        <div class="logo header__logo">
+            <a class="logo__link" href="#">
+                <img class="logo__img" src="./css/assets/images/photoshop-img/Logo.png" alt="#">
+            </a>
+        </div>
         <div class="header-content">
             <a class="header__btn btn--green-bg btn" href="#">Shop Now
             </a>
@@ -88,6 +86,7 @@
 
     <!--what are smoothies-->
     <section class="smoothies">
+        <div class="smoothies__container">
         <div class="smoothies__title">
             <h1 class="block-title smoothies__title-content">What are these smoothies?</h1>
         </div>
@@ -133,10 +132,12 @@
                 <span class="feature__text--orange">Made with love</span>
             </div>
         </div>
+    </div>
     </section>
 
     <!--about-->
     <section class="about">
+        <div class="about__container">
         <div class="about__img">
             <img class="about__img-left" src="./css/assets/images/photoshop-img/about-img.png" alt="#">
         </div>
@@ -156,6 +157,7 @@
                 </ul>
                 <a class="btn about__btn" href="#">About Organic Smoothie</a>
         </div>
+    </div>
     </section>
 
 
@@ -281,6 +283,7 @@
 
     <!--footer-->
     <div class="footer">
+        <div class="footer__container">
         <div class="footer__top">
             <div class="footer__top-content">
                 <div class="logo footer__logo">
@@ -355,6 +358,7 @@
         <div class="footer__bottom">
             <small class="footer__copyright-label">Go top</small>
             <a href="#main" class="footer__copyright-btn"></a>
+        </div>
         </div>
     </div>
 
