edit what are smoothies

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                         </ul>
                     </div>
                 </div>
-        </div>
     </div>
         <div class="logo header__logo">
             <a class="logo__link" href="#">
                 <img class="logo__img" src="./css/assets/images/photoshop-img/Logo.png" alt="#">
             </a>
         </div>
+    </div>
         <div class="header-content">
             <a class="header__btn btn--green-bg btn" href="#">Shop Now
             </a>
@@ -87,6 +87,7 @@
     <!--what are smoothies-->
     <section class="smoothies">
         <div class="smoothies__container">
+            <div class="smoothies__inner">
         <div class="smoothies__title">
             <h1 class="block-title smoothies__title-content">What are these smoothies?</h1>
         </div>
@@ -132,6 +133,7 @@
                 <span class="feature__text--orange">Made with love</span>
             </div>
         </div>
+    </div>
     </div>
     </section>
 
