--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header id="main" class="header">
+        <div class="container">
         <div class="header__top">
                 <nav class="menu header-menu">
                     <ul class="menu__list">
@@ -82,16 +83,17 @@
             <a class="header__btn btn--green-bg btn" href="#">Shop Now
             </a>
         </div>
+    </div>
     </header>
 
     <!--what are smoothies-->
     <section class="smoothies">
-        <div class="smoothies__container">
+        <div class="container">
             <div class="smoothies__inner">
         <div class="smoothies__title">
-            <h1 class="block-title smoothies__title-content">What are these smoothies?</h1>
+            <h1 class="block-title smoothies__title-content smoothies__ ">What are these smoothies?</h1>
         </div>
-        <div class="smoothies__text">
+        <div class="smoothie__text">
             <p class="text smoothies__text text--black">A smoothie is a drink made from pureed raw fruit, vegetables,
                 and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese),
                 typically using a blender. Smoothies may be made using other ingredients,
@@ -139,7 +141,7 @@
 
     <!--about-->
     <section class="about">
-        <div class="about__container">
+        <div class="about__wrapper container">
         <div class="about__img">
             <img class="about__img-left" src="./css/assets/images/photoshop-img/about-img.png" alt="#">
         </div>
@@ -165,30 +167,32 @@
 
     <!--products-->
     <section class="products">
+        <div class="products__wrapper">
         <div class="products__card">
             <img class="products__img" src="./css/assets/images/photoshop-img/bottle-1.png" alt="#">
-            <h3 class="block-title products__title">Dark Chocolate Smoothie</h3>
+            <h3 class="products__title">Dark Chocolate Smoothie</h3>
             <span class="products__subtitle">100 ml</span>
             <a class="btn products__btn" href="#"> <span class="btn__buy">Buy</span></a>
         </div>
         <div class="products__card">
             <img class="products__img" src="./css/assets/images/photoshop-img/bottle-2.png" alt="#">
-            <h3 class="block-title products__title">Vegan Lettuce Smoothie</h3>
+            <h3 class="products__title">Vegan Lettuce Smoothie</h3>
             <span class="products__subtitle">100 ml</span>
             <a class="btn products__btn" href="#"><span class="btn-arrow-yellow btn__buy">Buy</span></a>
         </div>
         <div class="products__card">
             <img class="products__img" src="./css/assets/images/photoshop-img/bottle-3.png" alt="#">
-            <h3 class="block-title products__title">Lemon Ginger Smoothie</h3>
+            <h3 class="products__title">Lemon Ginger Smoothie</h3>
             <span class="products__subtitle">100 ml</span>
             <a class="btn products__btn" href="#"><span class="btn__buy">Buy</span></a>
         </div>
         <div class="products__card">
             <img class="products__img" src="./css/assets/images/photoshop-img/bottle-4.png" alt="#">
-            <h3 class="block-title products__title">Turmeric Garlic Smoothie</h3>
+            <h3 class="products__title">Turmeric Garlic Smoothie</h3>
             <span class="products__subtitle">100 ml</span>
             <a class="btn products__btn" href="#"><span class="btn__buy">Buy</span></a>
         </div>
+    </div>
     </section>
 
     <!--Our story-->
