edit smoothies title

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="smoothies__inner">
         <div class="smoothies__title">
-            <h1 class="block-title smoothies__title-content smoothies__ ">What are these smoothies?</h1>
+            <h1 class="block-title smoothies__title-content">What are these smoothies?</h1>
         </div>
         <div class="smoothie__text">
             <p class="text smoothies__text text--black">A smoothie is a drink made from pureed raw fruit, vegetables,
