--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </div>
                     <div class="subscribe">
                         <h4 class="subscribe__title">Don't miss out!</h4>
-                        <div class="subscribe__placeholder">
+                        <div class="subscribe__form">
                             <input class="subscribe__input" type="text" placeholder="Subscribe to our newslatter">
                         </div>
                         <div class="sub-social">
