--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="container">
             <div class="story__wrapper">
                 <div class="story__inner">
-                    <div class="noname">
+                    <div class="story__wrap">
                     <h2 class="block-title story__title">Our story</h2>
                     <p class="text story__desc text--black">As products typically using raw fruits or vegetables,
                         smoothies include dietary
@@ -219,6 +219,7 @@
 
     <!--Testimonials-->
     <section class="testimonials">
+        <div class="container">
         <div class="testimonials__content">
             <div class="testimonial__title">
                 <h3 class="block-title testimonials__title">Why clients <span>LOVE</span> us?</h3>
@@ -226,16 +227,14 @@
 
             <div class="testimonials__comment comment">
                 <div class="comment__text">
-                    <q class="comment__quote">Smoothie is great. I don't know what else to say. I will let my mum know
+                    <q class="comment__quote text text--white">Smoothie is great. I don't know what else to say. I will let my mum know
                         about
                         this,
                         she could really make use of Smoothie! Smoothie saved my business.</q>
-                    <cite class="comment__cite"> - from Santa Monica, CA</cite>
+                    <cite class="comment__cite text--orange"> - from Santa Monica, CA</cite>
                 </div>
                 <img class="comment__avatar" src="./css/assets/images/photoshop-img/avatar-img.png" alt="#">
             </div>
-
-
             <div class="testimonials__arrows">
                 <a class="testimonials__arrow--left" href="#"><img
                         src="./css/assets/images/photoshop-img/testim-arrow.png"></a>
@@ -243,11 +242,13 @@
                         src="./css/assets/images/photoshop-img/testim-arrow2.png"></a>
             </div>
         </div>
+<!--
         <div class="testimonials__author">
             <div class="testimonials__author-name">Sarah A</div>
         </div>
-    </section>
-
+-->
+    </div>
+</section>
 
     <!--Blog-->
     <section class="blog">
