--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <section class="insta">
         <a class="insta__link" href=""><img class="insta__icon"
                 src="./css/assets/images/photoshop-img/green-insta-icon.png" alt="">ashasuperfoods</a>
-        <div class="insta__items">
+        <div class="insta__wrapper">
             <div class="insta__item">
                 <img class="insta__img" src="./css/assets/images/photoshop-img/Insta-img-1.png" alt="#">
             </div>
