--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <img class="about__img-left" src="./css/assets/images/photoshop-img/about-img.png" alt="#">
                 </div>
                 <div class="about__info">
-                    <h2 class="block-title about__title">
+                    <h2 class="block-title about__title title--white">
                         What makes Smoothie <br> an <span class="about__title--green">awesome drink?</span>
                     </h2>
                     <ul class="about__list">
@@ -173,25 +173,25 @@
         <div class="products__wrapper">
             <div class="products__card">
                 <img class="products__img" src="./css/assets/images/photoshop-img/bottle-1.png" alt="#">
-                <h3 class="products__title">Dark Chocolate Smoothie</h3>
+                <h3 class="products__title title--white">Dark Chocolate Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <a class="btn products__btn" href="#"> <span class="btn__buy">Buy</span></a>
             </div>
             <div class="products__card">
                 <img class="products__img" src="./css/assets/images/photoshop-img/bottle-2.png" alt="#">
-                <h3 class="products__title">Vegan Lettuce Smoothie</h3>
+                <h3 class="products__title title--white">Vegan Lettuce Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <a class="btn products__btn" href="#"><span class="btn-arrow-yellow btn__buy">Buy</span></a>
             </div>
             <div class="products__card">
                 <img class="products__img" src="./css/assets/images/photoshop-img/bottle-3.png" alt="#">
-                <h3 class="products__title">Lemon Ginger Smoothie</h3>
+                <h3 class="products__title title--white">Lemon Ginger Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <a class="btn products__btn" href="#"><span class="btn__buy">Buy</span></a>
             </div>
             <div class="products__card">
                 <img class="products__img" src="./css/assets/images/photoshop-img/bottle-4.png" alt="#">
-                <h3 class="products__title">Turmeric Garlic Smoothie</h3>
+                <h3 class="products__title title--white">Turmeric Garlic Smoothie</h3>
                 <span class="products__subtitle">100 ml</span>
                 <a class="btn products__btn" href="#"><span class="btn__buy">Buy</span></a>
             </div>
