--- a/index.html
+++ b/index.html
@@ -91,11 +91,9 @@
     <!--what are smoothies-->
     <section class="smoothies">
         <div class="container">
-            <div class="smoothies__inner">
-                <div class="smoothies__title">
-                    <h1 class="block-title smoothies__title-content">What are these smoothies?</h1>
-                </div>
-                <div class="smoothie__text">
+            <div class="smoothies__inner">               
+                    <h2 class="title smoothies__title title--orange">What are these smoothies?</h1>
+                
                     <p class="text smoothies__text text--black">A smoothie is a drink made from pureed raw fruit,
                         vegetables,
                         and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese),
@@ -103,7 +101,7 @@
                         such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar,
                         stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea,
                         chocolate, herbal supplements, or nutritional supplements.</p>
-                </div>
+                
                 <div class="smoothies__features">
                     <div class="feature smoothies__feature">
                         <img class="feature__img" src="./css/assets/images/photoshop-img/Icon-1.png" alt="#">
@@ -150,7 +148,7 @@
                     <img class="about__img-left" src="./css/assets/images/photoshop-img/about-img.png" alt="#">
                 </div>
                 <div class="about__info">
-                    <h2 class="block-title about__title title--white">
+                    <h2 class="title about__title title--white">
                         What makes Smoothie <br> an <span class="about__title--green">awesome drink?</span>
                     </h2>
                     <ul class="about__list">
@@ -206,7 +204,7 @@
             <div class="story__wrapper">
                 <div class="story__inner">
                     <div class="story__wrap">
-                        <h2 class="block-title story__title">Our story</h2>
+                        <h2 class="title story__title">Our story</h2>
                         <p class="text story__desc text--black">As products typically using raw fruits or vegetables,
                             smoothies include dietary
                             fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with
@@ -226,7 +224,7 @@
         <div class="container">
             <div class="testimonials__content">
                 <div class="testimonial__title">
-                    <h3 class="block-title testimonials__title">Why clients <span>LOVE</span> us?</h3>
+                    <h3 class="title testimonials__title">Why clients <span>LOVE</span> us?</h3>
                 </div>
 
                 <div class="testimonials__comment comment">
@@ -250,18 +248,12 @@
         </div>
     </section>
 
-    <!--
-        <div class="testimonials__author">
-                        <div class="testimonials__author-name">Sarah A</div>
-                    </div>
-    -->
-
     <!--Blog-->
     <section class="blog">
         <div class="container">
             <div class="blog__wrapper">
                 <div class="blog__inner">
-                    <h3 class="block-title blog__title">Our blog</h3>
+                    <h3 class="title blog__title">Our blog</h3>
                     <div class="blog__inner-img">
                         <img class="blog__img" src="./css/assets/images/photoshop-img/blog-img.png" alt="#">
                     </div>
