--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <header id="main" class="header">
         <div class="container">
             <div class="header__top">
+                <div class="header__burger--btn">
+                    
+                </div>
+
                 <nav class="menu header-menu">
                     <ul class="menu__list">
                         <li class="menu__item">
