--- a/index.html
+++ b/index.html
@@ -15,75 +15,83 @@
     <header id="main" class="header">
         <div class="container">
             <div class="header__top">
-                <div class="header__burger--btn">
-                    
-                </div>
 
-                <nav class="menu header-menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link" href="">Home</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="">Shop</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="">Story</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="">About</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="">Blog</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="">Testimonials</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="header__right-block">
-                    <div class="personal header__personal">
-                        <ul class="personal__list">
-                            <li class="personal__list-item">
-                                <a class="personal__link" href=""><img class="personal__icon-search"
-                                        src="./css/assets/images/photoshop-img/search-icon.png" alt=""></a>
+                <button class="header__burger--btn">
+
+                </button>
+
+                <div class="header__navigation">
+
+                    <nav class="menu header-menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Home</a>
                             </li>
-                            <li class="personal__list-item">
-                                <a class="personal__link" href=""><img class="personal__icon-user"
-                                        src="./css/assets/images/photoshop-img/User-icon.png" alt=""></a>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Shop</a>
                             </li>
-                            <li class="personal__list-item--active">
-                                <a class="personal__link-cart" href=""><img class="personal__cart-icon"
-                                        src="./css/assets/images/photoshop-img/Cart-icon.png" alt=""></a>
-                                <span class="personal__cart-count">0</span>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Story</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">About</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Blog</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Testimonials</a>
                             </li>
                         </ul>
-                    </div>
+                    </nav>
+                    <div class="header__right-block">
+                        <div class="personal header__personal">
+                            <ul class="personal__list">
+                                <li class="personal__list-item">
+                                    <a class="personal__link" href=""><img class="personal__icon-search"
+                                            src="./css/assets/images/photoshop-img/search-icon.png" alt=""></a>
+                                </li>
+                                <li class="personal__list-item">
+                                    <a class="personal__link" href=""><img class="personal__icon-user"
+                                            src="./css/assets/images/photoshop-img/User-icon.png" alt=""></a>
+                                </li>
+                                <li class="personal__list-item--active">
+                                    <a class="personal__link-cart" href=""><img class="personal__cart-icon"
+                                            src="./css/assets/images/photoshop-img/Cart-icon.png" alt=""></a>
+                                    <span class="personal__cart-count">0</span>
+                                </li>
+                            </ul>
+                        </div>
 
-                    <div class="social header__social">
-                        <ul class="social__list">
-                            <li class="social__list-item">
-                                <a class="social__link" href=""><img
-                                        src="./css/assets/images/photoshop-img/Faceb-icon.png" alt=""></a>
-                            </li>
-                            <li class="social__list-item">
-                                <a class="social__link" href=""><img
-                                        src="./css/assets/images/photoshop-img/Pint-icon.png" alt=""></a>
-                            </li>
-                            <li class="social__list-item">
-                                <a class="social__link" href=""><img
-                                        src="./css/assets/images/photoshop-img/Inst-icon.png" alt=""></a>
-                            </li>
-                        </ul>
+                        <div class="social header__social">
+                            <ul class="social__list">
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Faceb-icon.png" alt=""></a>
+                                </li>
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Pint-icon.png" alt=""></a>
+                                </li>
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Inst-icon.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
+
+                <div class="logo header__logo">
+                    <a class="logo__link" href="#">
+                        <img class="logo__img" src="./css/assets/images/photoshop-img/Logo.png" alt="#">
+                    </a>
+                </div>
+
             </div>
-            <div class="logo header__logo">
-                <a class="logo__link" href="#">
-                    <img class="logo__img" src="./css/assets/images/photoshop-img/Logo.png" alt="#">
-                </a>
-            </div>
+
         </div>
+
         <div class="header-content">
             <a class="header__btn btn--green-bg btn" href="#">Shop Now
             </a>
