--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <div class="header__top">
 
                 <button class="header__burger--btn">
-
                 </button>
 
                 <div class="header__navigation">
@@ -91,6 +90,68 @@
             </div>
 
         </div>
+
+        <div class="header__burger">
+
+                    <nav class="menu header-menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Shop</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Story</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">About</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Blog</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="">Testimonials</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header__right-block">
+                        <div class="personal header__personal">
+                            <ul class="personal__list">
+                                <li class="personal__list-item">
+                                    <a class="personal__link" href=""><img class="personal__icon-search"
+                                            src="./css/assets/images/photoshop-img/search-icon.png" alt=""></a>
+                                </li>
+                                <li class="personal__list-item">
+                                    <a class="personal__link" href=""><img class="personal__icon-user"
+                                            src="./css/assets/images/photoshop-img/User-icon.png" alt=""></a>
+                                </li>
+                                <li class="personal__list-item--active">
+                                    <a class="personal__link-cart" href=""><img class="personal__cart-icon"
+                                            src="./css/assets/images/photoshop-img/Cart-icon.png" alt=""></a>
+                                    <span class="personal__cart-count">0</span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="social header__social">
+                            <ul class="social__list">
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Faceb-icon.png" alt=""></a>
+                                </li>
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Pint-icon.png" alt=""></a>
+                                </li>
+                                <li class="social__list-item">
+                                    <a class="social__link" href=""><img
+                                            src="./css/assets/images/photoshop-img/Inst-icon.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
         <div class="header-content">
             <a class="header__btn btn--green-bg btn" href="#">Shop Now
