--- a/gulp-start2/src/index.html
+++ b/gulp-start2/src/index.html
@@ -215,14 +215,14 @@
                         What makes Smoothie <br> an <span class="about__title-green">awesome drink?</span>
                     </h2>
                     <ul class="about__list">
-                        <li class="about__list-item">Crunchy Puffs Texture</li>
-                        <li class="about__list-item">100 Calories per drink</li>
+                        <li class="about__list-item"><span class="about--bold">Crunchy Puffs</span>Texture</li>
+                        <li class="about__list-item"><span class="about--bold">100 Calories </span>per drink</li>
                         <li class="about__list-item">4g Plant Protein </li>
-                        <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
-                        <li class="about__list-item">No Sugar in our Savory Flavors</li>
-                        <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
-                        <li class="about__list-item">Gluten-Free & Grain-Free</li>
-                        <li class="about__list-item">Corn-Free & Soy-Free</li>
+                        <li class="about__list-item">Good source of <span class="about--bold">Magnesium & Vitamin B6</span></li>
+                        <li class="about__list-item"><span class="about--bold">No Sugar </span>in our Savory Flavors</li>
+                        <li class="about__list-item"><span class="about--bold">Non-GMO, Vegan & Paleo</span></li>
+                        <li class="about__list-item"><span class="about--bold">Gluten-Free & Grain-Free</span></li>
+                        <li class="about__list-item"><span class="about--bold">Corn-Free & Soy-Free</span></li>
                     </ul>
                     <a class="btn about__btn" href="#">About Organic Smoothie</a>
                 </div>
@@ -267,7 +267,7 @@
             <div class="story__wrapper">
                 <div class="story__inner">
                     <div class="story__wrap">
-                        <h2 class="title story__title">Our story</h2>
+                        <h2 class="title story__title text--orange">Our story</h2>
                         <p class="text story__desc text--black">As products typically using raw fruits or vegetables,
                             smoothies include dietary
                             fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with
@@ -287,12 +287,12 @@
         <div class="container">
             <div class="testimonials__content">
                 <div class="testimonials__title">
-                    <h3 class="title testimonials__subtitle">Why clients <span>LOVE</span> us?</h3>
+                    <h3 class="title testimonials__subtitle text--orange">Why clients <span>LOVE</span> us?</h3>
                 </div>
 
                 <div class="testimonials__comment comment">
                     <div class="comment__text">
-                        <q class="comment__quote text text--white">Smoothie is great. I don't know what else to say. I
+                        <q class="comment__quote text">Smoothie is great. I don't know what else to say. I
                             will let my mum know
                             about
                             this,
@@ -316,7 +316,7 @@
         <div class="container">
             <div class="blog__wrapper">
                 <div class="blog__inner">
-                    <h3 class="title blog__title">Our blog</h3>
+                    <h3 class="title blog__title text--orange">Our blog</h3>
                     <div class="blog__inner-img">
                         <img class="blog__img" src="./assets/images/photoshop-img/blog-img.png" alt="#">
                     </div>
@@ -329,7 +329,7 @@
                             ingredients
                             are both juiced ahead of time,
                             the mixed juice doesn't even have to be blended like a smoothie, i.e. a green juice or
-                            anything...<a class="blog__link" href="#"><span>Read more</span></a></p>
+                            anything...<a class="blog__link" href="#"><span class="blog__span">Read more</span></a></p>
                     </div>
                 </div>
             </div>
